--- a/index.html
+++ b/index.html
@@ -360,14 +360,18 @@
       }
 
       .video-card {
-        background: rgba(30, 30, 30, 0.9);
-        border-radius: 10px;
-        overflow: hidden;
-        width: 280px;
-        box-shadow: 0 0 10px #FF688C; /* Adds pink glow */
-        transition: transform 0.3s, box-shadow 0.3s;
-        position: relative;
-      }
+          width: 280px;
+          /* Fix a height that works for your design */
+          height: 230px;
+          background: rgba(30, 30, 30, 0.9);
+          border-radius: 10px;
+          overflow: hidden;
+          box-shadow: 0 0 10px #FF688C;
+          transition: transform 0.3s, box-shadow 0.3s;
+          position: relative;
+          display: flex;
+          flex-direction: column;
+        }
 
       .video-card:hover {
         transform: scale(1.03);
@@ -376,22 +380,19 @@
 
       .video-card img {
         width: 100%;
-        display: block;
-        transition: transform 0.3s;
+        /* Fix the image height for uniformity */
+        height: 158px;    /* For a 16:9 ratio, use 280px * (9/16) ≈ 157.5px */
+        object-fit: cover;
       }
 
       .video-card:hover img {
         transform: scale(1.05);
       }
 
-      .video-card .info {
-        padding: 15px;
-        background: rgba(0, 0, 0, 0.4);
-      }
-
       .video-card .info h3 {
         font-size: 1.1em;
         margin-bottom: 10px;
+        margin-left: 15px;
         color: #ff688c;
       }
 
@@ -570,33 +571,6 @@
     <div class="video-list" id="other-videos">
       <!-- Additional video cards will be injected here -->
     </div>
-    <div class="load-more-buttons">
-      <button
-        class="load-more-button"
-        onclick="loadMoreVideos(-1)"
-        id="load-more-left"
-        style="display: none;"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path
-            d="M13.7,8.3c-0.4-0.4-1-0.4-1.4,0l-3,3c-0.4,0.4-0.4,1,0,1.4l3,3c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3
-            c0.4-0.4,0.4-1,0-1.4L11.4,12l2.3-2.3C14.1,9.3,14.1,8.7,13.7,8.3z"
-          />
-        </svg>
-      </button>
-      <button
-        class="load-more-button"
-        onclick="loadMoreVideos(1)"
-        id="load-more-right"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path
-            d="M10.3,15.7c0.4,0.4,1,0.4,1.4,0l3-3c0.4-0.4,0.4-1,0-1.4l-3-3c-0.2-0.2-0.5-0.3-0.7-0.3s-0.5,0.1-0.7,0.3
-            C9.9,9.3,9.9,9.7,10.3,10.1L12.6,12l-2.3,2.3C9.9,14.7,9.9,15.3,10.3,15.7z"
-          />
-        </svg>
-      </button>
-    </div>
   </section>
 </div>
 
@@ -607,7 +581,7 @@
   <div></div>
   <!-- Centered Text -->
   <p style="grid-column: 2; text-align: center; margin: 0;">
-    &copy; uhhh balls. Made by EmoteFroggy
+    uhhh balls
   </p>
   <!-- Right-aligned Image -->
   <img
@@ -684,7 +658,7 @@
         return;
       }
 
-      const response = await fetch(`https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${channelId}&part=snippet,id&order=date&maxResults=10&pageToken=${pageToken || ''}`);
+      const response = await fetch(`https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${channelId}&part=snippet,id&order=date&maxResults=16&pageToken=${pageToken || ''}`);
       const data = await response.json();
       console.log('Other Videos Response:', data);
 
@@ -696,13 +670,14 @@
         otherVideosContainer.innerHTML = '';
         data.items.forEach(video => {
           otherVideosContainer.innerHTML += `
-            <div class="video-card">
-              <img src="${video.snippet.thumbnails.medium.url}" alt="${video.snippet.title}">
-              <div class="info">
-                <h3>${video.snippet.title}</h3>
-                <p>${video.snippet.description.substring(0, 100)}...</p>
+            <a class="video-card-link" href="https://www.youtube.com/watch?v=${video.id.videoId}" target="_blank">
+              <div class="video-card">
+                <img src="${video.snippet.thumbnails.medium.url}" alt="${video.snippet.title}">
+                <div class="info">
+                  <h3>${video.snippet.title}</h3>
+                </div>
               </div>
-            </div>
+            </a>
           `;
         });
 
@@ -710,9 +685,6 @@
           cachedData[channelId] = {};
         }
         cachedData[channelId][cacheKey] = data.items;
-
-        document.getElementById('load-more-left').style.display = prevPageTokens[currentChannelIndex] ? 'block' : 'none';
-        document.getElementById('load-more-right').style.display = nextPageTokens[currentChannelIndex] ? 'block' : 'none';
       } else {
         console.log('No videos found.');
         document.getElementById('other-videos').innerHTML = '<p>No videos available.</p>';
