--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
 
       body {
-        font-family: "Big Noodle Titling", cursive;
+        font-family: "Press Start 2P", cursive;
         background: linear-gradient(135deg, #111 0%, #222 50%, #111 100%);
         color: #eee;
         line-height: 1.6;
