--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
         font-size: 1.1em;
         margin-bottom: 10px;
         margin-left: 15px;
+        font-size: 13px;
         color: #ff688c;
       }
 
@@ -766,7 +767,6 @@
               <img src="${video.snippet.thumbnails.medium.url}" alt="${video.snippet.title}">
               <div class="info">
                 <h3 style="padding-left: 10px;">${video.snippet.title}</h3>
-                <p>${video.snippet.description.substring(0, 100)}...</p>
               </div>
             </div>
           </a>
