--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
           href="https://www.youtube.com/@RetroraAndCo"
           target="_blank"
           class="social-button"
-          title="YouTube"
+          title="Retrora & Co."
         >
           <i class="fab fa-youtube fa-lg"></i>
         </a>
