--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
         </div>
       </section>
       <img
-        src="https://cdn.discordapp.com/attachments/850412067920150528/1336244524908941355/IMG_5262.png?ex=67a31a30&is=67a1c8b0&hm=d88a6e7c067281b54a9bd0f957cd848bcd4a6ac2d293aa099e3315bd59d51267&"
+        src="https://gachi.gay/O4-Cp"
         alt="Goku Manga"
         class="goku-image"
       >
       <img
         class="gohan-image"
-        src="https://cdn.discordapp.com/attachments/850412067920150528/1336244524397105237/Wave_Transparent.png?ex=67a31a30&is=67a1c8b0&hm=6f983aff0213d4dbc63ced8eea3fedac245aa1da514055ae52ed1f1cacbd253f&"
+        src="https://gachi.gay/Jzt8i"
         alt="Gachi"
       >
       <!-- Other Videos Section -->
