--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Retrora & Co.</title>
+    <style>
+      body {
+      cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' width='24' height='24' viewBox='0 0 48 48' style='fill:%23ff688c;'%3E%3Cpath d='M35.654,24.09L13.524,3.404c-0.437-0.407-1.074-0.517-1.622-0.28C11.354,3.362,11,3.902,11,4.5v30 c0,0.577,0.331,1.103,0.851,1.352c0.519,0.251,1.137,0.18,1.587-0.181l6.112-4.892l5.777,13.306c0.33,0.76,1.214,1.109,1.973,0.778 l4.586-1.992c0.76-0.33,1.108-1.213,0.778-1.973l-3.044-7.011l-2.733-6.294l7.914-0.915c0.581-0.067,1.07-0.466,1.253-1.021 C36.237,25.1,36.081,24.49,35.654,24.09z'%3E%3C/path%3E%3C/svg%3E"), auto;
+    }
+
+    </style>
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Noodle+Titling&display=swap"
@@ -25,7 +31,7 @@
   <body>
     <!-- Header with Social Media Buttons -->
     <header>
-      <h1>Retrora & Co.</h1>
+      <h1>RETRORA & CO.</h1>
       <h2></h2>
       <div class="social-links">
         <!-- Twitch -->
@@ -136,11 +142,26 @@
 
     <!-- Main Content -->
     <div class="container">
-      <img
+      <svg
         class="Logo"
-        src="https://gachi.gay/Fn4O3"
-        alt="Gachi"
+        version="1.1"
+        id="svg1"
+        width="307.2"
+        height="379.2"
+        viewBox="0 0 307.2 379.2"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:svg="http://www.w3.org/2000/svg"
       >
+        <g id="g1">
+          <path
+            d="M 107.17922,233.24986 C 72.866444,198.95378 44.738434,170.73163 44.672554,170.53397 c -0.0883,-0.26485 11.35658,-0.34578 43.50687,-0.30765 l 43.626666,0.0517 62.55747,62.66826 62.55747,62.66826 -43.67747,-0.004 -43.67747,-0.004 z m 90.64411,-34.04968 -27.93724,-28.5456 17.44,-0.17818 c 12.40139,-0.1267 17.85603,-0.29293 18.88,-0.57536 8.21863,-2.26683 9.82322,-3.14071 14.73264,-8.02358 4.26289,-4.23982 6.7506,-8.04209 8.36374,-12.78327 l 1.26555,-3.71961 -0.20853,-5.28 c -0.13,-3.29158 -0.44414,-6.3646 -0.83416,-8.16 -0.78814,-3.62809 -3.70887,-9.7682 -5.99484,-12.60266 -3.37045,-4.17914 -11.60386,-9.28601 -17.09266,-10.60191 -2.55904,-0.61352 -3.97098,-0.63101 -51.11238,-0.63319 l -48.48064,-0.002 L 76.845454,78.094178 C 60.345804,61.593591 46.846084,47.98559 46.846084,47.85394 c 0,-0.131651 36.92677,-0.239366 82.059476,-0.239366 h 82.05947 l 7.14053,1.732807 c 14.05808,3.411501 25.31682,8.226248 34.33475,14.683098 9.8866,7.078809 11.20123,8.364672 20.84017,20.384099 5.43291,6.77466 10.29284,16.516652 14.04799,28.160002 1.8198,5.64253 2.07823,6.79151 2.69901,12 2.0213,16.95916 1.82104,23.33755 -1.12691,35.89355 -1.04968,4.47085 -2.54031,9.69309 -3.75532,13.15641 -1.70786,4.8681 -2.47091,6.5172 -5.00948,10.82645 -4.85605,8.2432 -14.27499,19.42763 -20.94867,24.87531 -7.76315,6.33701 -12.20135,9.30618 -18.24013,12.20273 -3.08991,1.4821 -6.59066,3.04879 -7.77945,3.48153 -1.18878,0.43274 -3.34167,1.22519 -4.78419,1.76101 l -2.62276,0.9742 z"
+            id="path1"
+          />
+        </g>
+      </svg>
+
+
+
       <!-- Newest Video Section -->
       <section class="newest-video">
         <div class="energy-glow"></div>
