--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Retrora & Co.</title>
     <style>
       body {
-      cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' width='24' height='24' viewBox='0 0 48 48' style='fill:%23ff688c;'%3E%3Cpath d='M35.654,24.09L13.524,3.404c-0.437-0.407-1.074-0.517-1.622-0.28C11.354,3.362,11,3.902,11,4.5v30 c0,0.577,0.331,1.103,0.851,1.352c0.519,0.251,1.137,0.18,1.587-0.181l6.112-4.892l5.777,13.306c0.33,0.76,1.214,1.109,1.973,0.778 l4.586-1.992c0.76-0.33,1.108-1.213,0.778-1.973l-3.044-7.011l-2.733-6.294l7.914-0.915c0.581-0.067,1.07-0.466,1.253-1.021 C36.237,25.1,36.081,24.49,35.654,24.09z'%3E%3C/path%3E%3C/svg%3E"), auto;
-    }
-
+        cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' width='24' height='24' viewBox='0 0 48 48' style='fill:%23ff688c;'%3E%3Cpath d='M35.654,24.09L13.524,3.404c-0.437-0.407-1.074-0.517-1.622-0.28C11.354,3.362,11,3.902,11,4.5v30 c0,0.577,0.331,1.103,0.851,1.352c0.519,0.251,1.137,0.18,1.587-0.181l6.112-4.892l5.777,13.306c0.33,0.76,1.214,1.109,1.973,0.778l4.586-1.992c0.76-0.33,1.108-1.213,0.778-1.973l-3.044-7.011l-2.733-6.294l7.914-0.915c0.581-0.067,1.07-0.466,1.253-1.021 C36.237,25.1,36.081,24.49,35.654,24.09z'%3E%3C/path%3E%3C/svg%3E"),
+          auto;
+      }
     </style>
     <!-- Google Fonts -->
     <link
@@ -122,46 +122,37 @@
           class="social-button bluesky"
           title="Bluesky"
         >
-          <svg
-            role="img"
-            viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg"
-          >
+          <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <title>Bluesky</title>
             <path
-              d="M12 10.8c-1.087-2.114-4.046-6.053-6.798-7.995C2.566.944 1.561 1.266.902 1.565.139 1.908 0 3.08 0 
-            3.768c0 .69.378 5.65.624 6.479.815 2.736 3.713 3.66 6.383 3.364.136-.02.275-.039.415-.056-.138.022-.276.04-.415.056-3.912.58-7.387
-            2.005-2.83 7.078 5.013 5.19 6.87-1.113 7.823-4.308.953 3.195 2.05 9.271 7.733 4.308 4.267-4.308 1.172-6.498-2.74-7.078a8.741 
-            8.741 0 0 1-.415-.056c.14.017.279.036.415.056 2.67.297 5.568-.628 6.383-3.364.246-.828.624-5.79.624-6.478 0-.69-.139-1.861-.902-2.206-.659-.298-1.664-.62-4.3 
-            1.24C16.046 4.748 13.087 8.687 12 10.8Z"
+              d="M12 10.8c-1.087-2.114-4.046-6.053-6.798-7.995C2.566.944 1.561 1.266.902 1.565.139 1.908 0 3.08 0 3.768c0 .69.378 5.65.624 6.479.815 2.736 3.713 3.66 6.383 3.364.136-.02.275-.039.415-.056-.138.022-.276.04-.415.056-3.912.58-7.387 2.005-2.83 7.078 5.013 5.19 6.87-1.113 7.823-4.308.953 3.195 2.05 9.271 7.733 4.308 4.267-4.308 1.172-6.498-2.74-7.078a8.741 8.741 0 0 1-.415-.056c.14.017.279.036.415.056 2.67.297 5.568-.628 6.383-3.364.246-.828.624-5.79.624-6.478 0-.69-.139-1.861-.902-2.206-.659-.298-1.664-.62-4.3 1.24C16.046 4.748 13.087 8.687 12 10.8Z"
             />
           </svg>
         </a>
       </div>
     </header>
 
+    <!-- Logo SVG (moved outside container) -->
+    <svg
+      class="Logo"
+      version="1.1"
+      id="svg1"
+      width="307.2"
+      height="379.2"
+      viewBox="0 0 307.2 379.2"
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:svg="http://www.w3.org/2000/svg"
+    >
+      <g id="g1">
+        <path
+          d="M 107.17922,233.24986 C 72.866444,198.95378 44.738434,170.73163 44.672554,170.53397 c -0.0883,-0.26485 11.35658,-0.34578 43.50687,-0.30765 l 43.626666,0.0517 62.55747,62.66826 62.55747,62.66826 -43.67747,-0.004 -43.67747,-0.004 z m 90.64411,-34.04968 -27.93724,-28.5456 17.44,-0.17818 c 12.40139,-0.1267 17.85603,-0.29293 18.88,-0.57536 8.21863,-2.26683 9.82322,-3.14071 14.73264,-8.02358 4.26289,-4.23982 6.7506,-8.04209 8.36374,-12.78327 l 1.26555,-3.71961 -0.20853,-5.28 c -0.13,-3.29158 -0.44414,-6.3646 -0.83416,-8.16 -0.78814,-3.62809 -3.70887,-9.7682 -5.99484,-12.60266 -3.37045,-4.17914 -11.60386,-9.28601 -17.09266,-10.60191 -2.55904,-0.61352 -3.97098,-0.63101 -51.11238,-0.63319 l -48.48064,-0.002 L 76.845454,78.094178 C 60.345804,61.593591 46.846084,47.98559 46.846084,47.85394 c 0,-0.131651 36.92677,-0.239366 82.059476,-0.239366 h 82.05947 l 7.14053,1.732807 c 14.05808,3.411501 25.31682,8.226248 34.33475,14.683098 9.8866,7.078809 11.20123,8.364672 20.84017,20.384099 5.43291,6.77466 10.29284,16.516652 14.04799,28.160002 1.8198,5.64253 2.07823,6.79151 2.69901,12 2.0213,16.95916 1.82104,23.33755 -1.12691,35.89355 -1.04968,4.47085 -2.54031,9.69309 -3.75532,13.15641 -1.70786,4.8681 -2.47091,6.5172 -5.00948,10.82645 -4.85605,8.2432 -14.27499,19.42763 -20.94867,24.87531 -7.76315,6.33701 -12.20135,9.30618 -18.24013,12.20273 -3.08991,1.4821 -6.59066,3.04879 -7.77945,3.48153 -1.18878,0.43274 -3.34167,1.22519 -4.78419,1.76101 l -2.62276,0.9742 z"
+          id="path1"
+        />
+      </g>
+    </svg>
+
     <!-- Main Content -->
     <div class="container">
-      <svg
-        class="Logo"
-        version="1.1"
-        id="svg1"
-        width="307.2"
-        height="379.2"
-        viewBox="0 0 307.2 379.2"
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:svg="http://www.w3.org/2000/svg"
-      >
-        <g id="g1">
-          <path
-            d="M 107.17922,233.24986 C 72.866444,198.95378 44.738434,170.73163 44.672554,170.53397 c -0.0883,-0.26485 11.35658,-0.34578 43.50687,-0.30765 l 43.626666,0.0517 62.55747,62.66826 62.55747,62.66826 -43.67747,-0.004 -43.67747,-0.004 z m 90.64411,-34.04968 -27.93724,-28.5456 17.44,-0.17818 c 12.40139,-0.1267 17.85603,-0.29293 18.88,-0.57536 8.21863,-2.26683 9.82322,-3.14071 14.73264,-8.02358 4.26289,-4.23982 6.7506,-8.04209 8.36374,-12.78327 l 1.26555,-3.71961 -0.20853,-5.28 c -0.13,-3.29158 -0.44414,-6.3646 -0.83416,-8.16 -0.78814,-3.62809 -3.70887,-9.7682 -5.99484,-12.60266 -3.37045,-4.17914 -11.60386,-9.28601 -17.09266,-10.60191 -2.55904,-0.61352 -3.97098,-0.63101 -51.11238,-0.63319 l -48.48064,-0.002 L 76.845454,78.094178 C 60.345804,61.593591 46.846084,47.98559 46.846084,47.85394 c 0,-0.131651 36.92677,-0.239366 82.059476,-0.239366 h 82.05947 l 7.14053,1.732807 c 14.05808,3.411501 25.31682,8.226248 34.33475,14.683098 9.8866,7.078809 11.20123,8.364672 20.84017,20.384099 5.43291,6.77466 10.29284,16.516652 14.04799,28.160002 1.8198,5.64253 2.07823,6.79151 2.69901,12 2.0213,16.95916 1.82104,23.33755 -1.12691,35.89355 -1.04968,4.47085 -2.54031,9.69309 -3.75532,13.15641 -1.70786,4.8681 -2.47091,6.5172 -5.00948,10.82645 -4.85605,8.2432 -14.27499,19.42763 -20.94867,24.87531 -7.76315,6.33701 -12.20135,9.30618 -18.24013,12.20273 -3.08991,1.4821 -6.59066,3.04879 -7.77945,3.48153 -1.18878,0.43274 -3.34167,1.22519 -4.78419,1.76101 l -2.62276,0.9742 z"
-            id="path1"
-          />
-        </g>
-      </svg>
-
-
-
       <!-- Newest Video Section -->
       <section class="newest-video">
         <div class="energy-glow"></div>
@@ -171,12 +162,9 @@
             class="arrow-button"
             onclick="switchChannel(-1)"
             id="left-arrow"
-            style="display: none;"
+            style="display: none"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
                 d="M13.7,8.3c-0.4-0.4-1-0.4-1.4,0l-3,3c-0.4,0.4-0.4,1,0,1.4l3,3c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3
                 c0.4-0.4,0.4-1,0-1.4L11.4,12l2.3-2.3C14.1,9.3,14.1,8.7,13.7,8.3z"
@@ -191,10 +179,7 @@
             onclick="switchChannel(1)"
             id="right-arrow"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
                 d="M10.3,15.7c0.4,0.4,1,0.4,1.4,0l3-3c0.4-0.4,0.4-1,0-1.4l-3-3c-0.2-0.2-0.5-0.3-0.7-0.3s-0.5,0.1-0.7,0.3
                 C9.9,9.3,9.9,9.7,10.3,10.1L12.6,12l-2.3,2.3C9.9,14.7,9.9,15.3,10.3,15.7z"
@@ -203,16 +188,8 @@
           </button>
         </div>
       </section>
-      <img
-        src="https://gachi.gay/O4-Cp"
-        alt="Goku Manga"
-        class="goku-image"
-      >
-      <img
-        class="gohan-image"
-        src="https://gachi.gay/Jzt8i"
-        alt="Gachi"
-      >
+      <img src="https://gachi.gay/O4-Cp" alt="Goku Manga" class="goku-image" />
+      <img class="gohan-image" src="https://gachi.gay/Jzt8i" alt="Gachi" />
       <!-- Other Videos Section -->
       <section class="other-videos">
         <h2>OTHER VIDEOS</h2>
@@ -223,12 +200,17 @@
     </div>
 
     <footer
-      style="display: grid; grid-template-columns: 1fr auto 1fr; align-items: center; padding: 10px 20px;"
+      style="
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        align-items: center;
+        padding: 10px 20px;
+      "
     >
       <!-- Left empty cell -->
       <div></div>
       <!-- Centered Text -->
-      <p style="grid-column: 2; text-align: center; margin: 0;">
+      <p style="grid-column: 2; text-align: center; margin: 0">
         Made with ‪‪❤︎‬ by EmoteFroggy
       </p>
       <!-- Right-aligned Image -->
