--- a/index.html
+++ b/index.html
@@ -199,23 +199,11 @@
       </section>
     </div>
 
-    <footer
-      style="
-        display: grid;
-        grid-template-columns: 1fr auto 1fr;
-        align-items: center;
-        padding: 10px 20px;
-      "
-    >
-      <!-- Left empty cell -->
-      <div></div>
-      <!-- Centered Text -->
-      <p style="grid-column: 2; text-align: center; margin: 0">
-        Made with ‪‪❤︎‬ by EmoteFroggy
-      </p>
-      <!-- Right-aligned Image -->
-    </footer>
-
+    <footer class="site-footer">
+      <div class="footer-content">
+          <p>Made with <span class="heart">❤</span> by EmoteFroggy</p>
+      </div>
+  </footer>
     <!-- Link your external JavaScript file -->
     <div id="nebula-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
