Updated the name of the 2 images

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
     
     <h2 id="channel-name">NEWEST VIDEO FROM RETRORA &amp; CO.</h2>
-  <p id="video-title">[Newest Video Title]</p>
+  <p id="video-title"></p>
     <div class="video-player-container">
       <div class="video-wrapper" id="newest-video">
         <!-- Newest video iframe will be injected here -->
@@ -164,8 +164,8 @@
     </div>
   </section>
 
-  <img src="https://gachi.gay/O4-Cp" alt="Goku Manga" class="goku-image" />
-  <img class="gohan-image" src="https://gachi.gay/Jzt8i" alt="Gachi" />
+  <img class="thumbs-down" src="https://gachi.gay/O4-Cp"  />
+  <img class="ret-waving" src="https://gachi.gay/Jzt8i"  />
 
   <!-- Other Videos Section -->
   <section class="other-videos">
