--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
       <section class="newest-video">
         <div class="channel-buttons">
           <button id="channel-btn-0" class="channel-btn active">
-            Retrora &amp; Co.
+            Retrora
           </button>
           <button id="channel-btn-1" class="channel-btn">
             Retrora Live
           </button>
         </div>
-        <h2 id="channel-name">NEWEST VIDEO FROM RETRORA &amp; CO.</h2>
+        <h2 id="channel-name">NEWEST VIDEO FROM RETRORA</h2>
         <p id="video-title"></p>
         <div class="video-player-container">
           <div class="video-wrapper" id="newest-video"></div>
