--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <i class="fab fa-twitch fa-lg"></i>
         </a>
         <a
-          href="https://www.youtube.com/@RetroraAndCo"
+          href="https://www.youtube.com/@Retrora"
           target="_blank"
           class="social-button"
           aria-label="Retrora & Co."
