--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Retrora & Co.</title>
-    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/850412067920150528/1350956757949747324/Retroverse-Logo-Fixed.png?ex=67d8a006&is=67d74e86&hm=3b0889430503ec43e89f52c78a15cbb0e45b4d06720ab7091b635f4e2eedddd5&">
+    <link rel="icon" type="image/x-icon" href="https://gachi.gay/-6_Emx">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
