--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             Retrora
           </button>
           <button id="channel-btn-1" class="channel-btn">
-            Retrora Live
+            Retrora LIVE
           </button>
         </div>
         <h2 id="channel-name">NEWEST VIDEO FROM RETRORA</h2>
