--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
             Retrora
           </button>
           <button id="channel-btn-1" class="channel-btn">
-            Retrora LIVE
+            Retrora Live
+          </button>
+          <button id="channel-btn-2" class="channel-btn">
+            Retrora Clips
           </button>
         </div>
         <h2 id="channel-name">NEWEST VIDEO FROM RETRORA</h2>
