--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Retrora & Co.</title>
-    <link rel="icon" type="image/x-icon" href="https://gachi.gay/-6_Emx">
+    <link rel="icon" type="image/x-icon" href="https://i.nuuls.com/epmTF.png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -145,12 +145,12 @@
 
       <img
         class="thumbs-down"
-        src="https://gachi.gay/O4-Cp"
+        src="https://i.nuuls.com/erz-6.png"
         loading="lazy"
       />
       <img
         class="ret-waving"
-        src="https://gachi.gay/Jzt8i"
+        src="https://i.nuuls.com/lfyuE.png"
         loading="lazy"
       />
 
