--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,13 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../style.css" />
-    <style>
-      @font-face {
-        font-family: 'crosswindsnowind';
-        src: url('fonts/crosswinds-nowind-webfont.woff') format('woff');
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -146,6 +140,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html> 
