--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio - Retrora & Co.</title>
-    <link rel="icon" type="image/x-icon" href="https://gachi.gay/-6_Emx">
+    <link rel="icon" type="image/x-icon" href="https://i.nuuls.com/epmTF.png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
